src/test/ui/generator/ref-escapes-but-not-over-yield.nll.stderr
error[E0521]: borrowed data escapes outside of generator
  --> $DIR/ref-escapes-but-not-over-yield.rs:11:9
   |
LL |     let mut a = &3;
   |         ----- `a` is declared here, outside of the generator body
...
LL |         a = &b;
   |         ^^^^--
   |         |   |
   |         |   borrow is only valid in the generator body
   |         reference to `b` escapes the generator body here

error: aborting due to previous error

